Version (CVS)
-------------

XML:    Bug fix for using addXxx methods.
        (Fix submitted by Michael Thyen <mthyen@excite.com>)

XML:    Bug fix in the handling of 'Map' collection. Now we use the abstract
        'Map' interface rather than 'HashMap'.
        (Fix submitted by Ron Smith <rsmith7209@yahoo.com>)

XML:    Added some logic to avoid unnecessary use of 'xsi:type' when
        marshalling. The logic check if Castor is able to find the proper java
        class to instantiate from the mapping file information.
        (Sebastien Gignoux <gignoux@intalio.com>) 

XML:    Solved a performance bug for unmarshalling of primitive type. We don't
        try anymore to generate a Class Descriptor for primitive type as we know
        that not only it fails but it is deadly slow (due to getMethods()
        call). Now, unmarhsalling speed is nearly only bounded by the speed of
        the parser.
        (Sebastien Gignoux <gignoux@intalio.com>) 

JDO:    Added "trigger" mode for SEQUENCE key generator. 
        (Vitaly Shishakov <vitaly.shishakov@novalumen.com>)

JDO:    Added support for MySQL auto_increment columns in IDENTITY key generator
        (Oleg Nitz, thanks to Alain RAVET <aravet@cirb.irisnet.be> for idea
        and to George Stewart <georgestewartiv@yahoo.com> for help).

JDO:    Improved support for BLOB and CLOB values. Now you can get them as 
        java.io.InputStream and java.sql.Clob, respectively, see "types.html"
        for details (oleg). 

JDO:    Solved problem of NULL dirty checking with Oracle (oleg).         
 
JDO:    Bug fix in the handling of classloader in the mapping loader (reported 
        by brian rogers <brian@freya.bianca.com>).

DSML:   Add a more detailed policies :
        * NewAttrOnly, which implies that new attributes are created according 
        to the DSML, but attributes that already have a value in the ldap are 
        not updated;